apps-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: apps-group
    alb.ingress.kubernetes.io/healthcheck-path: /web1
    alb.ingress.kubernetes.io/healthcheck-path: /web2
    alb.ingress.kubernetes.io/healthcheck-path: /web3
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /web1
            pathType: Prefix
            backend:
              service:
                name: web1-service
                port:
                  number: 80
          - path: /web2
            pathType: Prefix
            backend:
              service:
                name: web2-service
                port:
                  number: 80
          - path: /web3
            pathType: Prefix
            backend:
              service:
                name: web3-service
                port:
                  number: 80
